--- a/.github/workflows/cron_job.yml
+++ b/.github/workflows/cron_job.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements_cron_job.txt
       - name: Run daily_updates
-        run: python daily_updates.py 
+        run: python cron_job_for_github.py 
 
