--- a/.github/workflows/cron_job.yml
+++ b/.github/workflows/cron_job.yml
@@ -4,13 +4,11 @@ name: cron_job
 
 on:
   schedule:
-    # * is a special character in YAML so you have to quote this string
-    #- cron:  '00 10 * * *' #every day at 10 #when not in test mode
+    #- cron:  '00 10 * * *' #every day at 10 when not in test mode
     - cron:  '*/40 * * * *'
-   # Steps represent a sequence of tasks that will be executed as part of the job
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install Python 3
@@ -25,5 +23,6 @@ jobs:
         run:  |
          python database_manipulation.py
          python database_upd.py
-         python cron_job_for_github.py 
+         python cron_job_for_github.py
+         python print('i'm still alive') 
 
