--- a/.github/workflows/cron_job.yml
+++ b/.github/workflows/cron_job.yml
@@ -8,7 +8,7 @@ on:
     #- cron:  '*/5 * * * *'
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
       - name: Install Python 3
