--- a/.github/workflows/cron_job.yml
+++ b/.github/workflows/cron_job.yml
@@ -4,8 +4,8 @@ name: cron_job
 
 on:
   schedule:
-    - cron:  '00 10 * * *' #every day at 10 when not in test mode
-    #- cron:  '*/5 * * * *'
+   # - cron:  '00 10 * * *' #every day at 10 when not in test mode
+    - cron:  '*/5 * * * *'
 jobs:
   build:
     runs-on: windows-2019
@@ -24,5 +24,5 @@ jobs:
          python database_manipulation.py
          python database_upd.py
          python cron_job_for_github.py
-         python print('i'm still alive') 
+         python print('finished') 
 
